--- a/src/main/resources/message.yml
+++ b/src/main/resources/message.yml
@@ -1,31 +1,34 @@
-Prefix: "&f[&b傳送&f]"
+Prefix: "&#F2A2E8系統 &#F9B7FF»"
 
 Only-player-can-use-this-command: "{Prefix} &b只有玩家可以使用此指令"
 
 Command-tutorial:
-  - "============================"
-  - "&6tpa&e系統使用教學&f:"
-  - "   &f/&btpa 玩家 -&e> &f|&6發送傳送請求給指定玩家&f|"
-  - "   &f/&btpcancel 玩家 &e-> &f|&6收回已發送的傳送請求&f|"
-  - "   &f/&btpyes &e-> &f|&6接受其他玩家的傳送請求&f|"
-  - "   &f/&btpaccept &e-> &f|&6接受其他玩家的傳送請求&f|"
-  - "   &f/&btpno &e-> &f|&6拒絕其他玩家的傳送請求&f|"
-  - "   &f/&btpdeny &e-> &f|&6拒絕其他玩家的傳送請求&f|"
-  - "============================"
+  - "&#50C878&m---------&#3EB489&l玩家傳送&#50C878&m---------"
+  - "1&f. &#82CAFF/tpa <玩家> &f- &#FAF884發送傳送請求給指定玩家"
+  - "2&f. &#82CAFF/tpcancel &f- &#FAF884收回已發送的傳送請求"
+  - "3&f. &#82CAFF/tpyes &f- &#FAF884接受其他玩家傳送請求"
+  - "4&f. &#82CAFF/tpaccept &f- &#FAF884接受其他玩家傳送請求"
+  - "5&f. &#82CAFF/tpno &f- &#FAF884拒絕其他玩家傳送請求"
+  - "6&f. &#82CAFF/tpacancel &f- &#FAF884拒絕其他玩家傳送請求"
+  - "&#50C878&m-------------------------"
 
-Player-not-online: "{Prefix} &e此玩家不在線上"
-Teleport-to-myself: "{Prefix} &e你不能傳送自己"
-Already-has-pending-requests: "{Prefix} &e你已經有一個代處理的傳送請求"
-Did-not-receive-any-requests: "{Prefix} &e你沒有收到任何傳送請求"
+Sender:
+  not-online: "{Prefix} &#87CEFA此玩家不在線上"
+  teleport-to-myself: "{Prefix} &#87CEFA你不能傳送自己"
+  already-has-pending-requests: "{Prefix} &#87CEFA你已經有一個代處理的傳送請求"
+  did-not-receive-any-requests: "{Prefix} &#87CEFA你沒有收到任何傳送請求"
+  successful-send-request: "{Prefix} &#87CEFA成功發送傳送請求給&#50C878{Player}"
+  successful-retract-request: "{Prefix} &#87CEFA成功收回傳送請求"
+  receiver-deny-request: "{Prefix} &#50C878{Player}&#87CEFA拒絕了請求"
+  receiver-accept-request: "{Prefix} &#50C878{Player}&#87CEFA接受了請求"
+  request-outdated: "{Prefix} &#87CEFA發送給&#50C878{Player}&#87CEFA的傳送請求已過期"
 
-Send-request: "{Prefix} &d成功發送傳送請求給&6{Player}"
-Accept-request: "{Prefix} &a你成功接受了傳送請求"
-Deny-request: "{Prefix} &c你成功拒絕了傳送請求"
-Receiver-deny-request: "{Prefix} &6{Player}&e拒絕了請求"
-Receiver-accept-request: "{Prefix} &6{Player}&e接受了請求"
+Receiver:
+  receives-request: "{Prefix} &#50C878{Player}&#87CEFA發送了傳送請求給你&7(&#46C7C75分鐘後過期&7)"
+  accept-request: "{Prefix} &#87CEFA成功接受了傳送請求"
+  deny-request: "{Prefix} &#87CEFA成功拒絕了傳送請求"
 
-Click-to-retract-request: "&f[&dX&f]&e點擊收回傳送請求"
-Retract-request: "{Prefix} &c成功收回傳送請求"
-Click-to-accept-request: "&f[&a/tpaccept&b, &a/tpyes&f]&b接受"
-Click-to-deny-request: "&f[&a/tpdeny&b, &a/tpno&f]&b拒絕"
-Receiver-receives-the-request: "{Prefix} &6{Player}&b發送了傳送請求給你&7(&e請求將於&f5分鐘&e後過期&7)"
+Click-button:
+  accept: "&#00CED1[接受]"
+  deny: "&#FF2400[拒絕]"
+  cancel: "&#50C878[收回]"
