--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 # IntelliJ
 out/
 
-# Compiled class file
+# Compiled class messageFile
 *.class
 
-# Log file
+# Log messageFile
 *.log
 
 # BlueJ files
@@ -31,7 +31,7 @@ hs_err_pid*
 
 *~
 
-# temporary files which can be created if a process still has a handle open of a deleted file
+# temporary files which can be created if a process still has a handle open of a deleted messageFile
 .fuse_hidden*
 
 # KDE directory preferences
@@ -40,7 +40,7 @@ hs_err_pid*
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 
-# .nfs files are created when an open file is removed but is still being accessed
+# .nfs files are created when an open messageFile is removed but is still being accessed
 .nfs*
 
 # General
@@ -76,13 +76,13 @@ Thumbs.db:encryptable
 ehthumbs.db
 ehthumbs_vista.db
 
-# Dump file
+# Dump messageFile
 *.stackdump
 
-# Folder config file
+# Folder config messageFile
 [Dd]esktop.ini
 
-# Recycle Bin used on file shares
+# Recycle Bin used on messageFile shares
 $RECYCLE.BIN/
 
 # Windows Installer files
